lb/yaml/health_check_nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: global
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-global-deployment
  labels:
    namespace: global
spec:
  selector:
    matchLabels:
      app: healthcheck-global
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: healthcheck-global
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: healthcheck-global-service
  labels:
    shouldExpose: "yes"
spec:
  selector:
    app: healthcheck-global
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
