lb/yaml/cilium_gw.yaml
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: public-gw
# spec:
#   gatewayClassName: cilium
#   listeners:
#   - protocol: HTTP
#     port: 80
#     name: web-gw
#     allowedRoutes:
#       namespaces:
#         from: All
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: public-gw
# spec:
#   parentRefs:
#   - name: public-gw
#     namespace: default
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /healthcheck
#     backendRefs:
#     - name: healthcheck-global
#       port: 80
#
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  namespace: default
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: healthcheck-global-service
            port:
              number: 80
        path: /healthcheck
        pathType: Prefix
